# telegram-graph-gallery-downloader-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/scripts/: test.sh
.github/workflows/: publish.yml  release.yaml
examples/: Cargo.toml  coser.rs
src/: downloader.rs  lib.rs  main.rs  parser.rs
tests/: Cargo.toml  download_test.rs
