[package]
name = "telegram_graph_downloader"
version = "0.0.6"
edition = "2021"
description = "Telegram graph downloader"
documentation = "https://docs.rs/telegram_graph_downloader"
repository = "https://github.com/kingwingfly/telegram-graph-gallery-downloader-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23" }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
scraper = { version = "0.18.1" }
indicatif = { version = "0.17.7", optional = true }
clap = { version = "4.4.14", features = ["derive"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[features]
default = ["indicatif"]
indicatif = ["dep:indicatif"]
